[tool.poetry]
name = "postgres-geometry"
version = "0.1"
description = "Exposes Postgres geometry type into Django"
authors = ["Dipan Nanda <dipangithub@gmail.com>"]

packages = [
    { include = "postgres_geometry" }
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "5.2.4"
psycopg2_binary = "2.9.10"

[tool.poetry.group.dev.dependencies]
python-dotenv = "1.0.1"
pylint = "*"
pylint-django = "*"
ruff = "*"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
# https://beta.ruff.rs/docs/rules/
select = [
  "E",
  "F",
  "I",
  "W",
  "N",
  "UP",
  "C4",
  "Q",
  "RSE",
  "RET",
  "RUF",
  "NPY",
  "YTT",
  "S",
  "D",
]
ignore = [
  "N806",
  "N812",
  "N803",
  "S101",
  "S110",
  "D107",
  "D105",
  "S311",
  "S301",
  "UP006",
  "UP035",

]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
  "A",
  "B",
  "C4",
  "D",
  "E",
  "F",
  "G",
  "I",
  "N",
  "Q",
  "S",
  "W",
  "ANN",
  "ARG",
  "BLE",
  "COM",
  "DJ",
  "DTZ",
  "EM",
  "ERA",
  "EXE",
  "FBT",
  "ICN",
  "INP",
  "ISC",
  "NPY",
  "PD",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "TCH",
  "TID",
  "TRY",
  "UP",
  "YTT",
]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
  "tests",
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.pyright]
reportGeneralTypeIssues = "none"


[tool.autopep8]
max_line_length = 120
ignore = "E501,W6"    # or ["E501", "W6"]
in-place = true
recursive = true
aggressive = 3

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
order-by-type = true
force-sort-within-sections = true

[tool.pylint.main]
py-version = [3, 10]
jobs = 10
extension-pkg-whitelist = ['scipy', 'skimage', 'torch']
disable = ['W', 'R', 'C']

[tool.pylint.format]
max-line-length = 120

[tool.pylint.typecheck]
ignored-modules = [
  'torch',
  'cv2',
  'scipy',
  'skimage',
  'skimage.filters',
  'deeplake',
]

